--- a/PharmaEvaluation/Content/Site.css
+++ b/PharmaEvaluation/Content/Site.css
@@ -47,7 +47,7 @@ mark {
 }
 
 .float-right {
-    float: right;
+    float: right; 
 }
 
 .clear-fix:after {
@@ -187,9 +187,8 @@ ul#menu {
     text-align: right;
 }
 
-    ul#menu li {
-        display: inline;
-        list-style: none;
+    ul#menu li {        
+              
         padding-left: 15px;
     }
 
@@ -220,7 +219,7 @@ ul#menu {
         background-image: -webkit-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
         background-image: linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
         color: #3e5667;
-        padding: 20px 40px 30px 40px;
+        padding:  30px 40px;
     }
 
         .featured hgroup.title h1, .featured hgroup.title h2 {
