--- a/PharmaEvaluation/Views/Account/Register.cshtml
+++ b/PharmaEvaluation/Views/Account/Register.cshtml
@@ -42,7 +42,7 @@
             </li>
             <li>
                 @Html.LabelFor(m => m.Email)
-                @Html.TextAreaFor(m => m.Email)
+                @Html.TextBoxFor(m => m.Email)
             </li>
             
            
