--- a/PharmaEvaluation/Views/Home/Download.cshtml
+++ b/PharmaEvaluation/Views/Home/Download.cshtml
@@ -7,4 +7,11 @@
     <h2>@ViewBag.Message</h2>
 </hgroup>
 
+<body>
+    <p><h3>Please click the link below to open the document, 
+             or alternatively right click the link and choose "Save As..." to download</h3></p>
+    <a href="/Content/funny-things-you-didnt-know-maybe.pdf" target="_blank" style="color:blue;"><h4>Funny things you didnt know maybe</h4></a> 
+    
+</body>
+
 
